--- a/views/modifyComment.ejs
+++ b/views/modifyComment.ejs
@@ -1,3 +1,5 @@
-<input class="commentContents modifingcontents" value='<%= commentContents %>'>
-<input type='hidden' value='<%=location %>'>
-<span class="count badge badge-pill badge-info" id='modifyCommentBtn' data-id='<%=commentId %>' style='cursor:pointer;'>수정</span>
+<div id='wrap_modifingCommentUI'>
+	<input class="commentContents modifingcontents" value='<%= commentContents %>'>
+	<input type='hidden' value='<%=location %>'>
+	<span class="count badge badge-pill badge-info" id='modifyCommentBtn' data-id='<%=commentId %>' style='cursor:pointer;'>수정</span>
+</div>
