--- a/views/nav.ejs
+++ b/views/nav.ejs
@@ -21,7 +21,7 @@
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
           <a class="dropdown-item" href="/chat">Chat</a>
-          <a class="dropdown-item" href="#">unset</a>
+          <a class="dropdown-item" href="/addLayout">Layout</a>
           <div class="dropdown-divider"></div>
           <a class="dropdown-item" href="#">Something else here</a>
         </div>
