--- a/views/secondeditor.ejs
+++ b/views/secondeditor.ejs
@@ -86,7 +86,6 @@
 								<button class="btn btn-default" id="6" style="width: 80px; " onclick="addWidget('묶음 박스')">묶음 박스</button>
 							</div>
 						</div>
-					
 			        </div>
 			
 				
@@ -97,7 +96,7 @@
 			</div>
 
 			<a href="/" class="btn btn-default"><span class="movebutton">홈으로</span></a>
-			<a href="/process/addLayout" class="btn btn-default" onclick="saveLayout();"><span class="savebutton">저장</span></a>
+			<a class="btn btn-default" onclick="saveLayout();"><span class="savebutton">저장</span></a>
 		</div>
 		
 		<script src="/public/js/editor.js"></script>
