--- a/views/secondeditor.ejs
+++ b/views/secondeditor.ejs
@@ -43,10 +43,14 @@
     
 	</head>
 	<body>
+    <%- include ("./nav.ejs") %>
 		<div class='wrap_layoutNameSection'>
 			<!--<input class="layoutNameSection" value=''>-->
 			<%if(layoutInfo) { %>
 				<input id="layoutNameSection" value='<%=layoutInfo.layoutName %>'>
+				<input id="layoutIdSection" type='hidden' value='<%=layoutInfo._id %>'>
+			<% } else { %>
+				<input id="layoutNameSection" value=''>
 			<% } %>
 		</div>
 		<div>
@@ -76,7 +80,11 @@
 
 							</div>
 						</div>
-						<div  class="box" id="widgetbox" style="display:inline-block; margin-left: 1%; position: relative;"></div>
+						<%if(layoutInfo) { %>
+							<div  class="box" id="widgetbox" style="display:inline-block; margin-left: 1%; position: relative;"><%=layoutInfo.layout %></div>
+						<% } else { %>
+							<div  class="box" id="widgetbox" style="display:inline-block; margin-left: 1%; position: relative;"></div>
+						<% } %>
 
 						<div  class="box2" style="float: right;" >
 							<button class="btn btn-default" id="1" style="width: 80px;"  onclick="addWidget('게시판')">게시판</button>
@@ -90,11 +98,16 @@
 					</div>
 				</div>
 			</div>
-
-			<div id="listForDetail" style="width:500px; color: blue; height: 50px;"><%if(layoutInfo) $("#widgetbox")[0].innerHTML = layoutInfo.layout%></div>
-
+			
+			<div id="listForDetail" style="width:500px; color: blue; height: 50px;"></div>
+			
 			<a href="/" class="btn btn-default"><span class="movebutton">홈으로</span></a>
-			<a class="btn btn-default" onclick="saveLayout();"><span class="savebutton">저장</span></a>
+			<%if(layoutInfo) { %>
+				<a class="btn btn-default" onclick="editLayout();"><span class="editbutton">저장</span></a>
+			<% } else { %>
+				<a class="btn btn-default" onclick="saveLayout();"><span class="savebutton">저장</span></a>
+			<% } %>
+			
 		</div>
 		
 		<script src="/public/js/editor.js"></script>
