--- a/views/secondeditor.ejs
+++ b/views/secondeditor.ejs
@@ -98,9 +98,9 @@
 
 				<a href="/" class="btn btn-default"><span class="movebutton">홈으로</span></a>
 				<%if(layoutInfo) { %>
-					<a class="btn btn-default" onclick="editLayout();"><span class="editbutton">저장</span></a>
+					<a class="btn btn-default" onclick="editLayout();"><span class="saveOreditbutton">저장</span></a>
 				<% } else { %>
-					<a class="btn btn-default" onclick="saveLayout();"><span class="savebutton">저장</span></a>
+					<a class="btn btn-default" onclick="saveLayout();"><span class="saveOreditbutton">저장</span></a>
 				<% } %>
 
 			</div>
