--- a/views/comment.ejs
+++ b/views/comment.ejs
@@ -48,7 +48,7 @@
 								<%=comments[i].nestedComments[j].contents %>
 							</h4>
 							<h6 class="nestedCommentContents created" style="font-size: x-small;">
-								<%=comments[i].nestedComments[j].created_at %>
+								<%=moment(comments[i].nestedComments[j].created_at).format('YYYY-MM-DD hh:mm:ss') %>
 							</h6>
 						</div>
 					<% } %>
